# docs/swagger.yaml
@@ -39,6 +39,8 @@ definitions:
         allOf:
         - $ref: '#/definitions/dto.Coordinates'
         description: Вложенный JSON
+      cover_file_id:
+        type: string
       description:
         type: string
       end_time:
@@ -60,7 +62,7 @@ definitions:
         type: string
       coordinates:
         $ref: '#/definitions/dto.Coordinates'
-      cover_image:
+      cover_url:
         type: string
       creator_id:
         type: integer
@@ -132,6 +134,8 @@ definitions:
         type: string
       coordinates:
         $ref: '#/definitions/dto.Coordinates'
+      cover_file_id:
+        type: string
       description:
         type: string
       end_time:
@@ -149,7 +153,7 @@ definitions:
     type: object
   dto.UpdateProfileRequest:
     properties:
-      avatar_url:
+      avatar_file_id:
         type: string
       bio:
         type: string
@@ -368,6 +372,33 @@ paths:
       summary: Отправка сообщения
       tags:
       - Chats
+  /v1/files/upload:
+    post:
+      consumes:
+      - multipart/form-data
+      parameters:
+      - description: Файл
+        in: formData
+        name: file
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            additionalProperties: true
+            type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.ErrorResponse'
+      security:
+      - BearerAuth: []
+      summary: Загрузить файл
+      tags:
+      - Files
   /v1/geo/suggest:
     get:
       description: Ищет адреса и возвращает координаты
